# IL2CPP_Resolver

./: CMakeLists.txt  Data.hpp  Defines.hpp  Dumper.hpp  IL2CPP_Resolver.hpp  README.md  main.cpp
API/: Class.hpp  ResolveCall.hpp  String.hpp  Thread.hpp
Unity/: Defines.hpp  Obfuscators.hpp
Unity/API/: Application.hpp  Camera.hpp  Component.hpp  GameObject.hpp  LayerMask.hpp  Material.hpp  Object.hpp  Physics.hpp  Renderer.hpp  Rigidbody.hpp  Screen.hpp  Shader.hpp  Time.hpp  Transform.hpp
Unity/Structures/: Color.hpp  Engine.hpp  Matrix3x3.hpp  Matrix4x4.hpp  Quaternion.hpp  Rect.hpp  System_String.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp  il2cpp.hpp  il2cppDictionary.hpp
Utils/: Hash.hpp  Helper.hpp  VTable.hpp
xdl/: CMakeLists.txt
